platform/gatekeeper/constraints/disallow-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: disallow-root-user
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchLabels:
        app.kubernetes.io/part-of: p2-w10-lab
  parameters:
    runAsUser:
      rule: MustRunAsNonRoot
