platform/gatekeeper/constraints/max-deployment-replicas.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxDeploymentReplicas
metadata:
  name: max-deployment-replicas
  annotations:
    argocd.argoproj.io/sync-wave: "2"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
    namespaces: ["demo"]
  parameters:
    max: 5
